# Cubium

./: .clang-format  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile  Vagrantfile  cmake_install.cmake  format.sh  kill.sh  lint.sh  readme.md  runAll  runAll.sh  runHab.sh  start.sh  startPythonSystem.sh  startSimpleSystem.sh
demo/: .gitignore  demo_addresses.hpp  driveGnuPlotStreams.pl
demo/Component_A/: CMakeLists.txt  component_A  component_A.cpp
demo/Component_B/: CMakeLists.txt  Makefile  component_B  component_B.cpp  random.hpp
demo/LiveGnuPlot/: README.md  driveGnuPlotStreams.pl  test.pl  test.sh
demo/component/: .gitignore  example_component.cpp  subscription_request.h
demo/light/: .gitignore  light  light.cpp  readLightPot.h
demo/medianFilter/: .gitignore  .medianFilter.cpp.swn  CMakeLists.txt  MedianFilter.cpp  MedianFilter.h  kill.sh  medianFilter  medianFilter.cpp  medianFilterStream.h
demo/solarArray/: .gitignore  CMakeLists.txt  deploy.sh  panelDeploy.py  panelReset.py  solarArray  solarArray.cpp
demo/subnetmanager/: .gitignore  Makefile  subnet_driver  subnet_manager_driver.cpp
demo/temperature/: .gitignore  CMakeLists.txt  readTempPot.h  temperature  temperature.cpp
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  MCP9808_8py.html  README_8md.html  TempSensor_8cpp.html  ____init_____8py.html  annotated.html  classAdafruit__MCP9808_1_1MCP9808_1_1MCP9808-members.html  classAdafruit__MCP9808_1_1MCP9808_1_1MCP9808.html  classCOMP__NAME-members.html  classCOMP__NAME.html  classComponent-members.html  classComponent.html  classComponentList-members.html  classComponentList.html  classLocalCommunicator-members.html  classLocalCommunicator.html  classLocalSubnetManager-members.html  classLocalSubnetManager.html  classPhysicalCommunicator-members.html  classPhysicalCommunicator.html  classRoutingTable-members.html  classRoutingTable.html  classSpaCommunicator-members.html  classSpaCommunicator.html  classSubnetManager-members.html  classSubnetManager.html  classes.html  clientSocket_8cpp.html  clientSocket_8hpp.html  clientSocket_8hpp_source.html  component_8cpp.html  component_8hpp.html  component_8hpp_source.html  component__list_8hpp.html  component__list_8hpp_source.html  demo__addresses_8hpp.html  demo__addresses_8hpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_05df8a6d5b65bdc182ebbc58bd1eaf42.html  (+123 more)
doc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  MCP9808_8py.tex  README_8md.tex  TempSensor_8cpp.tex  ____init_____8py.tex  annotated.tex  classAdafruit__MCP9808_1_1MCP9808_1_1MCP9808.eps  classAdafruit__MCP9808_1_1MCP9808_1_1MCP9808.tex  classCOMP__NAME.eps  classCOMP__NAME.tex  classComponent.eps  classComponent.tex  (+91 more)
drivers/: demo_addresses.hpp
examples/: udp_server.cpp
hab/: .gitignore  addresses.hpp  init-component.sh  parameters.hpp
lib/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  component.cpp  component.hpp  component_list.hpp  local_communicator.cpp  local_communicator.hpp  local_component_routing_table.hpp  local_subnet_manager.cpp  local_subnet_manager.hpp  logical_address.cpp  logical_address.h  physical_communicator.hpp  routing_table.hpp  spa_communicator.cpp  spa_communicator.hpp  spa_message.h  subnet_manager.cpp  subnet_manager.hpp
python_system/: demo_addresses.hpp
simple_system/: demo_addresses.hpp
src/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  subnet_manager_driver.cpp
test/: .component_test.hpp.swp  .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  local_communicator_test.hpp  local_subnet_manager_test.hpp  main.cpp  routing_table_test.hpp  spa_communicator_test.hpp  spa_message_test.hpp  subnet_manager_test.hpp  test_template.hpp
test/mocks/: local_communicator.hpp  physical_communicator.hpp  spa_communicator.hpp
test/mocks/socket/: server_socket.hpp
(+339 files in other folders)
